arcadia/myarcadia-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myarcadia-kic
  annotations:
      kubernetes.io/ingress.class: "nginx"
      appprotect.f5.com/app-protect-policy: "default/myarcadia-nap-policy"
      appprotect.f5.com/app-protect-enable: "True"
      appprotect.f5.com/app-protect-security-log-enable: "True"
      appprotect.f5.com/app-protect-security-log: "default/myarcadia-nap-logconf"
      appprotect.f5.com/app-protect-security-log-destination: "syslog:server=192.168.211.11:5140"
spec:
  tls:
  - hosts:
    - myarcadia.foobz.com.au
    secretName: arcadia-foobz-com-au-tls
  rules:
  - host: myarcadia.foobz.com.au
    http:
      paths:
      - path: /
        backend:
          serviceName: main
          servicePort: 80
